--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.center {
+  @apply flex items-center  m-auto my-0;
+}
+
+.main-hello {
+  @apply text-6xl font-semibold mb-2;
+}
